# shimaenaga

./: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  setup.py
.github/workflows/: pypi-publish.yml
include/shimaenaga/: booster.h  config.h  export.h  model.h
python/: _shimaenaga.cpp
python/shimaenaga/: __init__.py  sklearn_api.py
src/: config.cpp
src/attention/: attention_engine.h
src/boosting/: block_trainer.cpp  block_trainer.h  booster.cpp
src/data/: token_planner.h
src/io/: serializer.cpp  serializer.h
src/objective/: objective.h
src/tree/: tree_learner.h
